# programming-technologies

./: run.sh
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: .CMakeLists.txt.swp  CMakeLists.txt
task2/C/: main.cpp
task3/: CMakeLists.txt
task4/: requirements.txt
task4/tests/test_01/: test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task5/cmake-with-flask/: Dockerfile
task5/cmake-with-flask/B/: Makefile  cmake_install.cmake
task5/cmake-with-flask/C/: Makefile  cmake_install.cmake
